@@ -23,6 +23,7 @@ Adds package =gptel= -- a LLM chat client.
 - Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.
 - Function ~M-x yet-toggle-window-split~ (bound to =C-c b s=).
 - In =org-mode= buffers, open a link by hitting =RET=.
+- Package =org-contrib=: enable add-on =ox-extra= to ignore headlines.
 
 *** Changed
 - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
